--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,14 @@ dependencies:
   hive: ^1.4.1+1
   hive_flutter: ^0.3.0+2
   path_provider: ^1.6.7
+  intl: ^0.16.1
+  flutter_placeholder_textlines: ^1.0.4
+  rubber: ^0.4.0
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
   fonts:
   - family: Montserrat
     fonts:
