--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,13 @@ dependencies:
     sdk: flutter
   meta: ^1.1.8
   bloc: ^4.0.0
-  flutter_bloc: ^4.0.0
   http: ^0.12.0+4
   hive: ^1.4.1+1
-  hive_flutter: ^0.3.0+2
-  path_provider: ^1.6.7
   intl: ^0.16.1
   rubber: ^0.4.0
-  liquid_pull_to_refresh: ^1.1.2
+  flutter_bloc: ^4.0.0
+  path_provider: ^1.6.7
+  adaptive_dialog: ^0.4.0
   build_context:
     path: ../build_context
 
