Fix some issues

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,9 +17,8 @@ dependencies:
   flutter_bloc: ^4.0.0
   path_provider: ^1.6.7
   adaptive_dialog: ^0.4.0
-  # build_context:
-  #   path: ../build_context
-  build_context: ^1.1.0
+  build_context:
+    git: https://github.com/EdsonOnildoJR/build_context
 
 flutter:
   uses-material-design: true
