--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,14 @@ dependencies:
   build_context:
     git: https://github.com/EdsonOnildoJR/build_context
 
+dev_dependencies:
+  flutter_launcher_icons: "^0.7.5"
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
+
 flutter:
   uses-material-design: true
   assets:
