--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,11 +22,16 @@ dependencies:
 
 dev_dependencies:
   flutter_launcher_icons: "^0.7.5"
+  flutter_native_splash: ^0.1.9
 
 flutter_icons:
   android: true
   ios: true
   image_path: "assets/images/logo.png"
+
+flutter_native_splash:
+  image: assets/images/logo.png
+  color: "232C51"
 
 flutter:
   uses-material-design: true
